@@ -1,3 +1,8 @@
+2016-08-19 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/test-p99-conformance.c:
+	  Enable a test for newer GCC, comment on other GCC issues.
+
 2016-08-18 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCC.y,
